<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/educationwallpapers"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context="com.example.fastaccess.classrutine.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
      <TextView
          android:layout_gravity="center_horizontal"
          android:layout_width="wrap_content"
          android:text="@string/heading_name"
          android:layout_height="wrap_content"
          android:textSize="25dp"
          android:textColor="#f20410"
          android:textStyle="bold"
          android:paddingBottom="20dp"
          />
      <Button

          android:id="@+id/Buttonmonday"

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/day_button1"
          android:textSize="20sp"
          android:textStyle="bold"
          android:drawableLeft="@drawable/day"
          /><Button

          android:id="@+id/Buttontuesday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/day_button2"
          android:textSize="20sp"
          android:textStyle="bold"
          android:drawableLeft="@drawable/day"
          /><Button
             android:id="@+id/Buttonwednesday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:text="@string/day_button3"
          android:textSize="20sp"
          android:textStyle="bold"
          android:drawableLeft="@drawable/day"
          /><Button
            android:id="@+id/Buttonthursday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:text="@string/day_button4"
          android:textSize="20sp"
          android:textStyle="bold"

          android:drawableLeft="@drawable/day"

          />

      </LinearLayout>


    </ScrollView>
